Refactor: the patient can get to see the queue line and the available doctor for that service  before joining the clinic's queue